libs/extractor/src/snapshots/extractor__tests__convert_tag-15.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box as={{A: \"section\", B: \"div\", C: Variable, D, [key]: \"section\", ...rest}[key]} w=\"100%\" h=\"100%\" />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "height",
                value: "100%",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "width",
                value: "100%",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((DevupAs0) => <DevupAs0 className=\"a b\" />)({\n\tA: \"section\",\n\tB: \"div\",\n\tC: Variable,\n\tD,\n\t[key]: \"section\",\n\t...rest\n}[key] || \"div\");\n",
}
